--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,15 @@
   margin: 0 auto;
   padding: 0;
   text-align: center;
-  border: 1px solid hotpink;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.active {
+  background-color: hotpink;
+  border-radius: 4px;
+  padding: .25rem 0.5rem;
+  color: white;
 }
 
 .logo {
@@ -11,12 +19,6 @@
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
