--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,19 @@
+/* PALETA DE COLORES GENERADA https://coolors.co/ed1c24-fdfffc-235789-f1d302-020100*/
+
 :root {
+  --rojo: hsla(358, 85%, 52%, 1);
+  --blanco: hsla(100, 100%, 99%, 1);
+  --azul: hsla(209, 59%, 34%, 1);
+  --amarillo: hsla(52, 98%, 48%, 1);
+  --negro: hsla(30, 100%, 0%, 1);
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--azul);
+  background-color: var(--negro);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,11 +24,9 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
 }
 
 body {
